@@ -1,7 +1,9 @@
 package jaeik.bimillog.domain.post.async;
 
 import jaeik.bimillog.domain.post.entity.PostSimpleDetail;
+import jaeik.bimillog.domain.post.entity.jpa.PostCacheFlag;
 import jaeik.bimillog.domain.post.repository.PostQueryRepository;
+import jaeik.bimillog.infrastructure.redis.RedisKey;
 import jaeik.bimillog.infrastructure.redis.post.RedisFirstPagePostAdapter;
 import jaeik.bimillog.infrastructure.redis.post.RedisRealTimePostAdapter;
 import jaeik.bimillog.infrastructure.redis.post.RedisSimplePostAdapter;
@@ -57,25 +59,25 @@ public class CacheRefreshExecutor {
 
     /**
      * <h3>비동기 게시글 수정 반영</h3>
-     * <p>인기글 Hash 캐시 무효화 + 첫 페이지 LSET 교체를 비동기로 처리합니다.</p>
+     * <p>실시간 인기글 Hash에서 해당 필드를 삭제합니다. (ZSet에는 글ID만 있어 수정 반영 불가)</p>
      * <p>공지/주간/레전드 글이면 해당 타입 Hash에 HSET으로 업데이트합니다.</p>
      * <p>첫 페이지에 없는 글이면 첫 페이지 캐시는 무시됩니다.</p>
      */
     @Async("cacheRefreshPool")
     public void asyncUpdatePost(Long postId, PostSimpleDetail updatedPost) {
-        // featuredType이 있으면 해당 캐시에 HSET으로 업데이트, 나머지 캐시에서는 삭제
+        redisSimplePostAdapter.removePostFromCache(RedisKey.REALTIME_SIMPLE_KEY, postId);
         if (updatedPost.getFeaturedType() != null) {
-            redisSimplePostAdapter.putPostToCache(updatedPost.getFeaturedType(), updatedPost);
-            // 다른 타입의 캐시에서는 삭제 (이전에 다른 타입이었을 수 있으므로)
-            for (var type : jaeik.bimillog.domain.post.entity.jpa.PostCacheFlag.values()) {
-                if (type != updatedPost.getFeaturedType() && type != jaeik.bimillog.domain.post.entity.jpa.PostCacheFlag.REALTIME) {
-                    redisSimplePostAdapter.removePostFromCache(type, postId);
-                }
-            }
-        } else {
-            redisSimplePostAdapter.removePostFromCache(postId);
+            redisSimplePostAdapter.putPostToCache(toHashKey(updatedPost.getFeaturedType()), updatedPost);
         }
         redisFirstPagePostAdapter.updatePost(postId, updatedPost);
+    }
+
+    private static String toHashKey(PostCacheFlag type) {
+        return switch (type) {
+            case WEEKLY -> RedisKey.WEEKLY_SIMPLE_KEY;
+            case LEGEND -> RedisKey.LEGEND_SIMPLE_KEY;
+            case NOTICE -> RedisKey.NOTICE_SIMPLE_KEY;
+        };
     }
 
     /**
@@ -92,7 +94,7 @@ public class CacheRefreshExecutor {
         if (lastPostId != null) {
             List<PostSimpleDetail> nextPosts = postQueryRepository.findBoardPostsByCursor(lastPostId, 1);
             if (!nextPosts.isEmpty()) {
-                redisFirstPagePostAdapter.appendPost(nextPosts.get(0));
+                redisFirstPagePostAdapter.appendPost(nextPosts.getFirst());
             }
         }
     }
